--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,13 @@
-!.gitignore
-vendor
-composer.lock
-example
-.idea
-.DS_Store
-Thumbs.db
+/.idea
+/.vscode
+/vendor/
+/composer.lock
+/composer.phar
+/phpunit.result.cache
+/.phpunit.cache/
+/.php-cs-fixer.cache
+/.DS_Store
+/Thumbs.db
+/build/
+/coverage/
+example/
