--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
   "name": "solophp/settings",
   "type": "library",
   "description": "Managing application settings stored in a database",
-  "keywords": ["settings","php","array"],
+  "keywords": ["settings", "php", "array"],
   "license": "MIT",
   "authors": [
     {
@@ -12,13 +12,21 @@
   ],
   "autoload": {
     "psr-4": {
-      "Solo\\": "Solo/"
+      "Solo\\Settings\\": "src/"
     }
   },
   "require": {
-    "php": ">=7.4",
-    "solophp/database": "^2.0",
-    "solophp/utilities": "main-dev"
+    "php": ">=8.1",
+    "ext-pdo": "*"
+  },
+  "require-dev": {
+    "phpunit/phpunit": "^10.5",
+    "squizlabs/php_codesniffer": "^3.9"
+  },
+  "scripts": {
+    "test": "phpunit --configuration phpunit.xml.dist",
+    "cs": "phpcs --standard=PSR12 src/ tests/",
+    "cs-fix": "phpcbf --standard=PSR12 src/ tests/"
   },
   "minimum-stability": "dev",
   "prefer-stable": true
